# fusion-toolbox

./: .gitignore  .gitlab-ci.yml  .pylintrc  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  environment.yml  interactive-tests.mk  requirements-dev.txt  setup.py  tasks.mk  tests.mk  unit-tests.mk  viz-tests.mk
deploy/: Makefile
doc/: doctest_runner.py
doc/samples/: Data Structures.ipynb  Data.ipynb  Processing.ipynb  Registration.ipynb  Visualization.ipynb  icp_odometry.py  processing.py  structures.py
doc/source/: .gitignore  conf.py  index.rst  modules.rst
experiments/icl-nuim/: __main__.py  workflow.py
experiments/interiornet/: .gitignore  __main__.py
experiments/pointnet/: point-sampling.frag  workflow.py
experiments/scenenn/: __main__.py  workflow.py
experiments/sunrgbd/: .gitignore  __main__.py
experiments/surfel-fusion/: odometry.py  ui.py  workflow.py
exps/deep-fusion/: .gitignore  workflow.py
exps/pointnet/: point-sampling.vert  workflow.py
exps/surfel-fusion/: .gitignore  odometry.py  ui.py  workflow.py
fiontb/: __init__.py  _open3d_functions.py  _utils.py  camera.py  datatypes.py  downsample.py  filtering.py  fiontblib.py  frame.py  pointcloud.py  processing.py  sensor.py  surfel.py  testing.py  tsdf.py  ui.py
fiontb/_test/: test_camera.py  test_filtering.py  test_frame.py  test_processing.py  test_surfel.py
fiontb/_tests/: test_camera.py  test_datatypes.py  test_filtering.py  test_frame.py
fiontb/app/klg_view/: __main__.py
fiontb/app/sensor_record/: __main__.py
fiontb/app/surfel_slam/: __main__.py
fiontb/data/: __init__.py  _util.py  datatype.py  ftb.py  iclnuim.py  ilrgbd.py  interiornet.py  klg.py  pdc.py  scenenn.py  sens.py  sensor.py  sunrgbd.py  trajectory.py  tumrgbd.py  viewer.py  ycb.py
fiontb/data/_tests/: .gitignore  _utils.py  test_sens.py
fiontb/fusion/: __init__.py  _brutesearch.py  _nearestpoints.py  fiontblib.py  indexmap.py  surfel.py  tsdf.py
fiontb/fusion/_indexmap/: chair-model.ply  indexmap.frag  indexmap.vert  query.frag  query.vert
fiontb/fusion/_test/: frame-info.json
fiontb/fusion/fsf/: __init__.py  fusion.py  global_registration.py  indexmap.py  merge.py  registration.py
fiontb/fusion/surfel/: __init__.py  _ckernels.py  _raster.py  carve_space.py  clean.py  confidence.py  core.py  effusion.py  fusion.py  indexmap.py  indexmap2.py  intra_merge.py  live_merge.py  merge.py  merge_live.py  merging.py  model.py  (+3 more)
fiontb/metrics/: __init__.py  _test_metrics.py  geometry.py  mesh.py  trajectory.py  tum.py
fiontb/nodes/: evaluation.py  processing.py  viz.py
fiontb/pipeline/: fsf_slam.py  surfel_slam.py
fiontb/pose/: __init__.py  autogradicp.py  gicp.py  icp.py  multiscale_optim.py  open3d.py  open3d_interop.py  result.py  se3.py  so3.py
fiontb/registration/: autogradicp.py  icp.py  multiscale_optim.py  result.py  se3.py  so3.py
fiontb/sparse/: indexmap.frag  indexmap.py  indexmap.vert  indexmap_query.frag  octtree.py
fiontb/spatial/: __init__.py  aabb.py  cindexmap.py  indexmap.py  indexmap_query.vert  kdtree_layer.py  matching.py  trigoctree.py  volume.py
fiontb/ui/: __init__.py  _frame_ui.py  _surfel_rec.py
fiontb/viz/: __init__.py  datasetviewer.py  draw.py  open3ddsviewer.py  sdfrender.py  show.py  surfelcloud.py  surfelrender.py  trajectoryviewer.py
include/fiontb/: aabb.hpp  accessor.hpp  camera.hpp  cuda_camera.hpp  cuda_utils.hpp  dense_volume.hpp  device.hpp  downsample.hpp  eigen_common.hpp  elastic_fusion.hpp  error.hpp  filtering.hpp  fsf.hpp  geometry.hpp  hash_volume.hpp  icp_jacobian.hpp  icpodometry.hpp  indexmap.hpp  kernel.hpp  matching.hpp  math.hpp  mesh.hpp  metrics.hpp  nearest_neighbors.hpp  normals.hpp  octree.hpp  octtree.hpp  pointgrid.hpp  processing.hpp  sat.hpp  se3.hpp  slamfeat.hpp  so3.hpp  sparse_volume.hpp  surfel.hpp  surfel_fusion.hpp  surfel_volume.hpp  triangle_mesh_octree.hpp  trigoctree.hpp  tsdf_fusion.hpp
include/slamtb/: aabb.hpp  accessor.hpp  camera.hpp  cuda_utils.hpp  device.hpp  eigen_common.hpp  elastic_fusion.hpp  error.hpp  geometry.hpp  hash_volume.hpp  icp_jacobian.hpp  kernel.hpp  matching.hpp  math.hpp  nearest_neighbors.hpp  processing.hpp  sat.hpp  se3.hpp  slamfeat.hpp  sparse_feature_set.hpp  surfel.hpp  surfel_fusion.hpp  surfel_volume.hpp  triangle_mesh_octree.hpp
samples/surfel_slam/: surfel_slam.py
slamtb/: _utils.py  camera.py  frame.py  pointcloud.py  processing.py  sensor.py  surfel.py  testing.py
slamtb/_test/: test_camera.py  test_processing.py  test_surfel.py
slamtb/data/: _util.py  ftb.py  ilrgbd.py  klg.py  scenenn.py  trajectory.py  tumrgbd.py
slamtb/metrics/: __init__.py  geometry.py  trajectory.py  tum.py
slamtb/nodes/: evaluation.py  processing.py  viz.py
slamtb/pipeline/: __init__.py  surfel_slam.py
slamtb/registration/: __init__.py  autogradicp.py  correspondence_map.py  icp.py  multiscale.py  multiscale_optim.py  preset.py  result.py  se3.py
slamtb/spatial/: kdtree_layer.py  matching.py  sparse_feature_set.py  trigoctree.py
slamtb/ui/: _frame_ui.py  _surfel_rec.py
slamtb/viz/: __init__.py  datasetviewer.py  show.py  surfelrender.py  trajectoryviewer.py
src/: CMakeLists.txt  _cfiontb.cpp  _cslamtb.cpp  _fiontb.cpp  aabb.cpp  aabb.cu  atomic_int.hpp  bilateral_depth_filter.cu  bilateralfilter.cu  camera.cpp  camera.cu  correspondence.hpp  correspondence_map.cu  cuda_error.hpp  cuda_utils.cpp  dense_matcher.cu  dense_volume.cpp  downsample.cu  elastic_fusion.cpp  elastic_fusion_clean.cu  elastic_fusion_update.cu  erode_mask.cu  exp_rt.hpp  exp_rt_to_matrix.cu  exp_rt_transform.cpp  featsurfel.hpp  featsurfel_live_merge.cu  feature_map.cu  feature_map.hpp  feature_map3d.cu  filtering.cpp  filtering.cu  fpcl_matcher.cu  fsf.cpp  fsf_common.hpp  fsf_live_merge.cu  fsf_merge_surfels.cu  geometry.cpp  grid_matcher.cu  icp_jacobian.cpp  (+58 more)
src/test/: CMakeLists.txt  test_aabb.cpp  test_fiontb
test-data/rgbd/: .gitignore  Snakefile  scene2-kcam.json  scene2-rtcam.freiburg  view.py
test-data/trajectory/: freiburd1_desk_gt.traj  freiburd1_desk_pred.traj  view_trajectories.py
(+119 files in other folders)
